syntax = "proto3";
package DomainServices.RealEstateValuationService;
option csharp_namespace = "DomainServices.RealEstateValuationService.Contracts";

message CreateRealEstateValuationAttachmentRequest {
    int32 RealEstateValuationId = 1;
    string Title = 2;
    string FileName = 3;
    bytes FileData = 4;
    string MimeType = 5;
    int32 AcvAttachmentCategoryId = 6;
}

message CreateRealEstateValuationAttachmentResponse {
    int32 RealEstateValuationAttachmentId = 1;
}