syntax = "proto3";
package DomainServices.RealEstateValuationService;
option csharp_namespace = "DomainServices.RealEstateValuationService.Contracts";

message DeleteRealEstateValuationAttachmentRequest {
    int32 RealEstateValuationAttachmentId = 1;
}
